syntax = "proto3";

message ModuleInput {
	optional int32 num_datastores = 1;
}

message ModuleOutput {
	repeated ServiceIdPortId created_service_ids_to_port_ids = 1;
}

message ServiceIdPortId {
	string service_id = 1;
	string port_id = 2;
}
